tests/e2e/semantics/nested_types7.story
function foo returns List[List[int]]
	return [["foo"]]

a = foo()
